# agentic-data-sentinel

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENVIRONMENT_SETUP.md  LICENSE  README.md  README_SIMPLE.md  SECURITY.md  TEST_SCRIPTS.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_GUIDE.md  anomaly_detection_logic.md  check-syntax.py  create_sample_data.py  deploy-to-vercel.md  deploy-vercel-simple.ps1  deploy-vercel-simple.sh  deploy-vercel.ps1  deploy-vercel.sh  docker-compose.observability.yml  docker-compose.yml  docker-run.ps1  docker-run.sh  env.example  env.observability  env.simple  env.vercel.example  env.vercel.template  nginx.conf  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-vercel.txt  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: index.py
app/: __init__.py  config.py  database.py  database_vercel.py  main.py  main_vercel.py  main_vercel_simple.py  models.py  schemas.py
app/agents/: __init__.py  langgraph_agent.py
app/api/v1/: api.py
app/api/v1/endpoints/: agent.py  anomalies.py  datasets.py  external.py  health.py  runs.py
app/frontend/: streamlit_main.py
app/middleware/: logging.py
app/observability/: __init__.py  metrics.py  tracing.py
app/services/: agent_service_simple.py  external_apis.py  llm_service.py  mcp_service.py  validation_service.py
client/: app.py  requirements.txt  start.py
data/: api_logs.json  employees.csv  inventory.csv  sample_employees.csv  sample_employees.xlsx  sample_products.json
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: generate_sample_data.py  init-db.sql
server/: env.example  main.py  requirements.txt  start.py
server/app/agents/: __init__.py  base_agent.py  data_loading_agent.py  enhanced_orchestration_agent.py  intelligent_anomaly_detection_agent.py  intelligent_validation_agent.py  learning_agent.py  notification_agent.py  remediation_agent.py
server/app/api/: endpoints.py  schemas.py
server/app/core/: __init__.py  config.py  database.py
server/app/models/: __init__.py  dataset.py  run.py
server/app/services/: __init__.py  intelligent_llm_service.py  llm_service.py
server/app/utils/: __init__.py  json_encoder.py
tests/: __init__.py  conftest.py  test_api.py  test_services.py
tests/unit/: test_sample.py
